--- a/src/App.css
+++ b/src/App.css
@@ -31,5 +31,5 @@ ul {
   justify-content: space-around;
   align-items: center;
   color: green;
-  background-color: darkorange;
+  background-color: hotpink;
 }
